--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>RGS History Magazine website</title>
   </head>
   <body>
+    <h1>
+      This is the official (kinda) RGS History and Beyond Magazine.
+    </h1>
     <txt>
       This website is a work in progress. It may be a while before any meaningful content goes up.
     </txt>
