--- a/index.html
+++ b/index.html
@@ -1,14 +1,105 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>RGS History Magazine website</title>
-  </head>
-  <body>
-    <h1>
-      This is the official (kinda) RGS History and Beyond Magazine.
-    </h1>
-    <txt>
-      This website is a work in progress. It may be a while before any meaningful content goes up.
-    </txt>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Royal Blue Banner</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    header {
+      background-color: royalblue;
+      color: white;
+      padding: 40px 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+
+    nav {
+      margin-top: 10px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 25px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .banner-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .text-section {
+      max-width: 50%;
+    }
+
+    .text-section h1 {
+      font-size: 48px;
+      margin: 0;
+    }
+
+    .image-section img {
+      width: 300px;
+      border-radius: 10px;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .banner-content {
+        flex-direction: column;
+      }
+
+      .text-section, .image-section {
+        max-width: 100%;
+      }
+
+      .image-section img {
+        width: 80%;
+        margin-top: 20px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <div class="banner-content">
+      <div class="text-section">
+        <h1>Welcome to The Official History Magazine Site!</h1>
+      </div>
+      <div class="image-section">
+        <img src="https://via.placeholder.com/300x200" alt="Banner Image" />
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+</body>
 </html>
