--- a/index.html
+++ b/index.html
@@ -2,28 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Royal Blue Banner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RGS History Magazine</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
     }
 
-    header {
-      background-color: royalblue;
+    /* 🔔 Yellow announcement bar */
+    .announcement {
+      background-color: gold;
+      color: black;
+      text-align: center;
+      padding: 10px 0;
+      font-weight: bold;
+      animation: slideDown 1s ease-out;
+    }
+
+    @keyframes slideDown {
+      from {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    /* 🧭 Navigation bar */
+    .nav-bar {
+      background-color: #222;
       color: white;
-      padding: 40px 60px;
+      padding: 15px 60px;
       display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
+      justify-content: flex-end;
     }
 
-    nav {
-      margin-top: 10px;
-    }
-
-    nav ul {
+    .nav-bar ul {
       list-style: none;
       display: flex;
       gap: 25px;
@@ -31,10 +48,25 @@
       padding: 0;
     }
 
-    nav ul li a {
+    .nav-bar ul li a {
       color: white;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    .nav-bar ul li a:hover {
+      color: gold;
+    }
+
+    /* 💙 Banner */
+    header {
+      background-color: royalblue;
+      color: white;
+      padding: 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
     .banner-content {
@@ -59,9 +91,12 @@
     }
 
     @media (max-width: 768px) {
+      .nav-bar {
+        justify-content: center;
+      }
+
       header {
         flex-direction: column;
-        align-items: center;
         text-align: center;
       }
 
@@ -82,23 +117,31 @@
 </head>
 <body>
 
+  <!-- 🔔 Announcement Bar -->
+  <div class="announcement">
+    🎉 Free shipping on orders over £20!
+  </div>
+
+  <!-- 🧭 Navigation Bar -->
+  <div class="nav-bar">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Shop</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+
+  <!-- 💙 Main Banner -->
   <header>
     <div class="banner-content">
       <div class="text-section">
-        <h1>Welcome to The Official History Magazine Site!</h1>
+        <h1>Welcome to Our Site!</h1>
       </div>
       <div class="image-section">
         <img src="https://via.placeholder.com/300x200" alt="Banner Image" />
       </div>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
 </body>
