--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: "Times New Roman", serif;
     }
 
-    /* 🔔 Yellow announcement bar */
+    /* 🔔 Announcement Bar */
     .announcement {
       background-color: gold;
       color: black;
@@ -31,7 +31,7 @@
       }
     }
 
-    /* 🧭 Navigation bar */
+    /* 🧭 Navigation Bar */
     .nav-bar {
       background-color: #222;
       color: white;
@@ -59,11 +59,11 @@
       color: gold;
     }
 
-    /* 💙 Banner */
+    /* 💙 Royal Blue Banner */
     header {
       background-color: royalblue;
       color: white;
-      padding: 60px;
+      padding: 100px 60px; /* Increased padding for a longer banner */
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -81,12 +81,12 @@
     }
 
     .text-section h1 {
-      font-size: 48px;
+      font-size: 60px;
       margin: 0;
     }
 
     .image-section img {
-      width: 300px;
+      width: 350px;
       border-radius: 10px;
     }
 
@@ -117,29 +117,29 @@
 </head>
 <body>
 
-  <!-- 🔔 Announcement Bar -->
+  <!-- Announcement Bar -->
   <div class="announcement">
-    🎉 Free shipping on orders over £20!
+    🎉 The Latest Issue Has Been Sent To Print!
   </div>
 
-  <!-- 🧭 Navigation Bar -->
+  <!--  Navigation Bar -->
   <div class="nav-bar">
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Shop</a></li>
+      <li><a href="#">News</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </div>
 
-  <!-- 💙 Main Banner -->
+  <!-- 💙 Royal Blue Banner -->
   <header>
     <div class="banner-content">
       <div class="text-section">
         <h1>Welcome to Our Site!</h1>
       </div>
       <div class="image-section">
-        <img src="https://via.placeholder.com/300x200" alt="Banner Image" />
+        <img src="https://via.placeholder.com/350x250" alt="Banner Image" />
       </div>
     </div>
   </header>
