--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <h1>Welcome to Our Site!</h1>
       </div>
       <div class="image-section">
-        <img src="https://via.placeholder.com/350x250" alt="Banner Image" />
+        <img src="covers.png" alt="Banner Image"/>
       </div>
     </div>
   </header>
