--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       color: gold;
     }
 
-    /* 💙 Royal Blue Banner */
+    /*Banner */
     header {
       background-color: royalblue;
       color: white;
-      padding: 100px 60px; /* Increased padding for a longer banner */
+      padding: 500px 300px; /* Increased padding for a longer banner */
       display: flex;
       justify-content: space-between;
       align-items: center;
