--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
     </ul>
   </div>
 
-  <!-- 💙 Royal Blue Banner -->
+  <!-- Banner -->
   <header>
     <div class="banner-content">
       <div class="text-section">
-        <h1>Welcome to Our Site!</h1>
+        <h1>Welcome To The Official Site for The History Magazine!</h1>
       </div>
       <div class="image-section">
-        <img src="covers.png" alt="Banner Image"/>
+        <img src="Covers.png" alt="Banner Image"/>
       </div>
     </div>
   </header>
