--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     header {
       background-color: royalblue;
       color: white;
-      padding: 500px 300px; /* Increased padding for a longer banner */
+       min-height: 400px; /* Makes banner longer vertically */
+      padding: 40px 60px; /* Less side-padding */
       display: flex;
       justify-content: space-between;
       align-items: center;
