--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
   <!--  Navigation Bar -->
   <div class="nav-bar">
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">News</a></li>
+      <li><a href="news.html">News</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </div>
