--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h1>Welcome To The Official Site for The History Magazine!</h1>
       </div>
       <div class="image-section">
-        <img src="Covers.png" alt="Banner Image"/>
+        <img src="Covers (1).png" alt="Banner Image"/>
       </div>
     </div>
   </header>
