--- a/news.html
+++ b/news.html
@@ -68,6 +68,22 @@
 </head>
 <body>
 
+    <!-- Announcement Bar -->
+  <div class="announcement">
+    🎉 The Latest Issue Has Been Sent To Print!
+  </div>
+
+  <!--  Navigation Bar -->
+  <div class="nav-bar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+
+
   <header>
     <h1>News & Updates</h1>
     <p>Sharing updates, news and stories.</p>
