--- a/news.html
+++ b/news.html
@@ -152,7 +152,7 @@
       <h2>Our New Website 💻</h2>
       <div class="date">5 May 2025</div>
       <p>Explore our new website, take a tour, and learn how we created it.</p>
-      <a href="#" class="read-more">Read more →</a>
+      <a href="news-our-new-website.html" class="read-more">Read more →</a>
     </div>
 
     <!-- Add more posts here -->
