--- a/news-bye-for-now.html
+++ b/news-bye-for-now.html
@@ -149,16 +149,17 @@
   <!-- 🧭 Navigation Bar -->
   <div class="nav-bar">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 
   <!-- 💙 Article Header -->
   <header>
-    <h1>Article Title Goes Here</h1>
-    <p>By Author Name | Date: 7 May 2025</p>
+    <h1>Bye For Now! 👋</h1>
+    <p>History Magazine | Date: 7 May 2025</p>
   </header>
 
   <!-- 📰 Article Main Content -->
@@ -166,10 +167,10 @@
     <div class="article-content">
       <div class="article-main">
         <!-- Article Image -->
-        <img src="https://via.placeholder.com/1000x500" alt="Article Image">
+        <img src="https://images.unsplash.com/photo-1569154941061-e231b4725ef1?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Article Image">
         
         <!-- Article Text -->
-        <h1>The Article Heading</h1>
+        <h1>Some Mixed News 🥲</h1>
      
 
         <p>It is with mixed feelings that we announce a temporary pause in the production of the RGS History Magazine, which will not be releasing any new editions until September 2025. 
