--- a/contact.html
+++ b/contact.html
@@ -140,9 +140,10 @@
   <!-- 🧭 Navigation Bar -->
   <div class="nav-bar">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 
