--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
 
   <!-- 🔔 Announcement Bar -->
   <div class="announcement">
-    🎉 Free shipping on orders over £20!
+    🎉 The Latest Issue Of The Magazine Has Been Sent to Print!
   </div>
 
   <!-- 🧭 Navigation Bar -->
