--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
   <!-- 💙 About Page Header -->
   <header>
     <h1>About Us</h1>
-    <p>Learn more about our mission and our story 💙</p>
+    <p>Learn more about our mission and our story 💛</p>
   </header>
 
   <!-- 💬 About Us Content -->
