--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
 
       <!-- Embed Google Form here -->
       <div class="google-form">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVrtzKzLkNnCg0N9dfvQDQeJ9IqGEwHT_MKz9vQw57c7hINg/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeke8p1a4qxBkBQvuC3SYNEsvssvb8n9Kdf6NcjEgIafWFxlw/viewform?usp=dialog" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </section>
 
