--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
   <div class="nav-bar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="news.html">News</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
 
