--- a/about.html
+++ b/about.html
@@ -120,12 +120,12 @@
   <div class="container">
     <section>
       <h2>Our Story</h2>
-      <p>We started this journey with the vision of bringing eco-friendly fashion to the masses. Our commitment to sustainability and design excellence drives everything we do. Every piece we create is made with care, ensuring that our impact on the planet is as positive as our products.</p>
+      <p>The RGS History Magazine aims to provide a fun activity for students, and a cool magazine for pupils to read, enjoy, and increase their history knowledge.</p>
     </section>
 
     <section>
-      <h2>Our Mission</h2>
-      <p>Our mission is simple: to make fashion that’s not just stylish but also kind to the environment. We believe in supporting the planet, one outfit at a time. We use eco-friendly materials and ethical production methods to create items that not only look good but also do good for the world around us.</p>
+      <h2>INFO GOES HERE</h2>
+      <p>GOnna put some info here</p>
     </section>
 
   </div>
