--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
   <!-- 🔔 Announcement Bar -->
   <div class="announcement">
-    🎉 Free shipping on orders over £20!
+    🎉 The Latest Issue Has Been Sent To Print!
   </div>
 
   <!-- 🧭 Navigation Bar -->
