--- a/news-our-new-website.html
+++ b/news-our-new-website.html
@@ -143,7 +143,7 @@
 
   <!-- 🔔 Announcement Bar -->
   <div class="announcement">
-    🎉 Free shipping on orders over £20!
+    🎉 The Latest Issue Has Been Sent To Print!
   </div>
 
   <!-- 🧭 Navigation Bar -->
@@ -183,9 +183,9 @@
         <div class="related-posts">
           <h3>Related Posts</h3>
           <ul>
-            <li><a href="#">How to Start a Blog</a></li>
-            <li><a href="#">Tips for Writing Engaging Content</a></li>
-            <li><a href="#">5 Ways to Improve Your Website's Design</a></li>
+            <li><a href="#">The Latest Issue Has Been Sent To Print!</a></li>
+            <li><a href="#">Bye For Now! 👋</a></li>
+  
           </ul>
         </div>
       </div>
