--- a/contact.html
+++ b/contact.html
@@ -159,34 +159,10 @@
       <h2>Get In Touch</h2>
       <p>If you have any questions, concerns, or feedback, feel free to send us a message through the form below!</p>
 
-      <!-- Embed Google Form here -->
-      <div class="google-form">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeke8p1a4qxBkBQvuC3SYNEsvssvb8n9Kdf6NcjEgIafWFxlw/viewform?usp=dialog" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-    </section>
+    <!-- Elfsight Contact Form | Untitled Contact Form -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-ef0444d8-5d78-4998-ac49-d7514467a024" data-elfsight-app-lazy></div>
 
-    <!-- 📞 Contact Details Section -->
-    <section>
-      <h2>Other Ways to Reach Us</h2>
-      <div class="contact-details">
-        <div>
-          <h3>Phone</h3>
-          <p>Call us at <a href="tel:+441234567890">+44 123 456 7890</a></p>
-        </div>
-        <div>
-          <h3>Email</h3>
-          <p>Email us at <a href="mailto:contact@mywebsite.com">contact@mywebsite.com</a></p>
-        </div>
-        <div>
-          <h3>Follow Us</h3>
-          <p>Connect with us on social media:</p>
-          <p>
-            <a href="#">Instagram</a> | <a href="#">Twitter</a> | <a href="#">Facebook</a>
-          </p>
-        </div>
-      </div>
-    </section>
-  </div>
-
+   
 </body>
 </html>
