--- a/index.html
+++ b/index.html
@@ -145,5 +145,13 @@
     </div>
   </header>
 
+  <div class="poll-section">
+
+    <!-- Elfsight Poll | Untitled Poll -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-f69f1130-1f69-42bc-9d7c-c3f9c0e92f02" data-elfsight-app-lazy></div>
+
+  </div>
+
 </body>
 </html>
