--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 
   <div class="poll-section">
 
+    <h1>Take part in the monthly poll! 🎉</h1>
+
     <!-- Elfsight Poll | Untitled Poll -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-f69f1130-1f69-42bc-9d7c-c3f9c0e92f02" data-elfsight-app-lazy></div>
