--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@ const events = [
         const currentEvent = getCurrentEvent();
         displayEvent(currentEvent);
     </script>
+
+  </div>
     
 </body>
 </html>
