--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
             align-items: center;
             justify-content: center;
         }
+
+    .poll-section {
+      text-align: center;
+    }
+
+    
   </style>
 </head>
 <body>
