--- a/index.html
+++ b/index.html
@@ -235,9 +235,7 @@ const events = [
     { date: '2025-04-23', title: 'April 23rd, 1564: Shakespeare’s Birthday', description: 'William Shakespeare, one of the most celebrated playwrights in history, is born in Stratford-upon-Avon.' },
     { date: '2025-04-30', title: 'April 30th, 1789: George Washington’s Inauguration', description: 'George Washington is inaugurated as the first President of the United States, setting the tone for the nation’s future.' },
     { date: '2025-05-07', title: 'May 7th, 1992: The First McDonald’s in Russia', description: 'The first McDonald’s in Russia opens in Moscow, symbolizing the country’s move towards the West.' },
-    { date: '2025-05-14', title: 'May 14th, 1948: Edward Jenner administers the first smallpox vaccine', description: 'Dr. Edward Jenner gave the first successful smallpox vaccination, laying the groundwork for modern immunology. His work would eventually lead to the eradication of smallpox — the first disease to be wiped out by human effort!
-
-' },
+    { date: '2025-05-14', title: 'May 14th, 1948: Edward Jenner administers the first smallpox vaccine', description: 'Dr. Edward Jenner gave the first successful smallpox vaccination, laying the groundwork for modern immunology. His work would eventually lead to the eradication of smallpox — the first disease to be wiped out by human effort!' },
     { date: '2025-05-21', title: 'May 21st, 1881: The American Red Cross is Founded', description: 'Clara Barton establishes the American Red Cross, an organization that would go on to provide disaster relief around the world.' },
     { date: '2025-05-28', title: 'May 28th, 1937: The Golden Gate Bridge Opens', description: 'The Golden Gate Bridge, an iconic symbol of San Francisco, officially opens to traffic after four years of construction.' },
     { date: '2025-06-04', title: 'June 4th, 1940: The Dunkirk Evacuation', description: 'During WWII, British and Allied forces successfully evacuate from Dunkirk, France, in an operation that would boost morale.' },
