--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
       font-size: 1rem;
       font-weight: bold;
       color: white;
-      background: linear-gradient(270deg, #007cf0, #00dfd8, #007cf0);
+      background: linear-gradient(270deg, #00c851, #33b5e5, #007e33, #00c851);
       background-size: 600% 600%;
-      animation: gradientAnimation 10s ease infinite;
+      animation: gradientAnimation 12s ease infinite;
     }
 
     @keyframes gradientAnimation {
